// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loader writeRequires when there are different file extensions writes the story imports 1`] = `
"
  /* do not change this file, it is auto generated by storybook. */

  import { start } from '@storybook/react-native';
  
  import "@storybook/addon-ondevice-notes/register";
import "@storybook/addon-ondevice-controls/register";
import "@storybook/addon-ondevice-backgrounds/register";
import "@storybook/addon-ondevice-actions/register";

  const normalizedStories = [{
      titlePrefix: "",
      directory: "./scripts/mocks/file-extensions",
      files: "FakeStory.stories.tsx",
      importPathMatcher: /^\\.[\\\\/](?:FakeStory\\.stories\\.tsx)$/,
      // @ts-ignore
      req: require.context('./', false, /^\\.[\\\\/](?:FakeStory\\.stories\\.tsx)$/)
    }]

  // @ts-ignore
  global.STORIES = normalizedStories;

  export const view = start({
    annotations: [require('./preview'),require("@storybook/react-native/dist/preview"), require('@storybook/addon-actions/preview')],
    storyEntries: normalizedStories
  });
"
`;

exports[`loader writeRequires when there is a configuration object writes the story imports 1`] = `
"
  /* do not change this file, it is auto generated by storybook. */

  import { start } from '@storybook/react-native';
  
  import "@storybook/addon-ondevice-notes/register";
import "@storybook/addon-ondevice-controls/register";
import "@storybook/addon-ondevice-backgrounds/register";
import "@storybook/addon-ondevice-actions/register";

  const normalizedStories = [{
      titlePrefix: "ComponentsPrefix",
      directory: "./scripts/mocks/configuration-objects/components",
      files: "**/*.stories.tsx",
      importPathMatcher: /^\\.(?:(?:^|\\/|(?:(?:(?!(?:^|\\/)\\.).)*?)\\/)(?!\\.)(?=.)[^/]*?\\.stories\\.tsx)$/,
      // @ts-ignore
      req: require.context('./components', true, /^\\.(?:(?:^|\\/|(?:(?:(?!(?:^|\\/)\\.).)*?)\\/)(?!\\.)(?=.)[^/]*?\\.stories\\.tsx)$/)
    }]

  // @ts-ignore
  global.STORIES = normalizedStories;

  export const view = start({
    annotations: [require('./preview'),require("@storybook/react-native/dist/preview"), require('@storybook/addon-actions/preview')],
    storyEntries: normalizedStories
  });
"
`;

exports[`loader writeRequires when there is a story glob writes the story imports 1`] = `
"
  /* do not change this file, it is auto generated by storybook. */

  import { start } from '@storybook/react-native';
  
  import "@storybook/addon-ondevice-notes/register";
import "@storybook/addon-ondevice-controls/register";
import "@storybook/addon-ondevice-backgrounds/register";
import "@storybook/addon-ondevice-actions/register";

  const normalizedStories = [{
      titlePrefix: "",
      directory: "./scripts/mocks/all-config-files",
      files: "FakeStory.stories.tsx",
      importPathMatcher: /^\\.[\\\\/](?:FakeStory\\.stories\\.tsx)$/,
      // @ts-ignore
      req: require.context('./', false, /^\\.[\\\\/](?:FakeStory\\.stories\\.tsx)$/)
    }]

  // @ts-ignore
  global.STORIES = normalizedStories;

  export const view = start({
    annotations: [require('./preview'),require("@storybook/react-native/dist/preview"), require('@storybook/addon-actions/preview')],
    storyEntries: normalizedStories
  });
"
`;

exports[`loader writeRequires when there is no preview does not add preview related stuff 1`] = `
"
  /* do not change this file, it is auto generated by storybook. */

  import { start } from '@storybook/react-native';
  
  import "@storybook/addon-ondevice-notes/register";
import "@storybook/addon-ondevice-controls/register";
import "@storybook/addon-ondevice-backgrounds/register";
import "@storybook/addon-ondevice-actions/register";

  const normalizedStories = [{
      titlePrefix: "",
      directory: "./scripts/mocks/no-preview",
      files: "FakeStory.stories.tsx",
      importPathMatcher: /^\\.[\\\\/](?:FakeStory\\.stories\\.tsx)$/,
      // @ts-ignore
      req: require.context('./', false, /^\\.[\\\\/](?:FakeStory\\.stories\\.tsx)$/)
    }]

  // @ts-ignore
  global.STORIES = normalizedStories;

  export const view = start({
    annotations: [require("@storybook/react-native/dist/preview"), require('@storybook/addon-actions/preview')],
    storyEntries: normalizedStories
  });
"
`;
